--- a/example/package.json
+++ b/example/package.json
@@ -14,7 +14,8 @@
     "react-native": "0.77.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
+    "@babel/cli": "^7.26.4",
+    "@babel/core": "^7.26.9",
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
     "@react-native-community/cli": "15.0.1",
