chore: update release-it to support changelog

--- a/package.json
+++ b/package.json
@@ -124,6 +124,12 @@
     },
     "npm": {
       "publish": false
+    },
+    "plugins": {
+      "@release-it/conventional-changelog": {
+        "preset": "angular",
+        "infile": "CHANGELOG.md"
+      }
     }
   },
   "eslintConfig": {
