--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "@evilmartians/lefthook": "^1.5.0",
     "@react-native-community/cli": "15.0.1",
     "@react-native/eslint-config": "^0.73.1",
-    "@release-it/conventional-changelog": "^9.0.2",
+    "@release-it/conventional-changelog": "10.0.0",
     "@types/jest": "^29.5.5",
     "@types/react": "^18.2.44",
     "babel-plugin-tester": "^11.0.4",
@@ -127,7 +127,9 @@
     },
     "plugins": {
       "@release-it/conventional-changelog": {
-        "preset": "angular",
+        "preset": {
+          "name": "angular"
+        },
         "infile": "CHANGELOG.md"
       }
     }
