--- a/package.json
+++ b/package.json
@@ -123,7 +123,7 @@
       "release": true
     },
     "npm": {
-      "publish": false
+      "publish": true
     },
     "plugins": {
       "@release-it/conventional-changelog": {
